--- a/WebContent/assets/css/ani.css
+++ b/WebContent/assets/css/ani.css
@@ -180,3 +180,9 @@ hr {
   text-decoration: none;
   color: black;
 }
+
+.creations-sub {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
