--- a/WebContent/assets/css/header/header.css
+++ b/WebContent/assets/css/header/header.css
@@ -182,10 +182,11 @@ header{
   height: 20px;
   justify-content: center;
   align-items: center;
-  background-color: rgb(198, 133, 238);
+  background-color: #B4AEE8;
   color: black;
   border-radius: 5px;
   text-decoration-line: none;
+  font-weight : bold;
 }
 
 .mypage-btn{
@@ -193,10 +194,11 @@ header{
   height: 20px;
   justify-content: center;
   align-items: center;
-  background-color: rgb(198, 133, 238);
+  background-color: #B4AEE8;
   color: black;
   border-radius: 5px;
   text-decoration-line: none;
+  font-weight : bold;
 }
 
 .logout-btn{
@@ -204,7 +206,7 @@ header{
   height: 20px;
   justify-content: center;
   align-items: center;
-  background-color: rgb(198, 133, 238);
+  background-color: #B4AEE8;
   color: black;
   border-radius: 5px;
   text-decoration-line: none;
@@ -217,7 +219,7 @@ header{
   height: 25px;
   justify-content: center;
   align-items: center;
-  background-color: rgb(198, 133, 238);
+  background-color: #B4AEE8;
   color: black;
   border-radius: 5px;
   text-decoration-line: none;
