--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -229,9 +229,13 @@ li.menu-list:nth-child(5) {
   width: 300px;
   height: 300px;
   margin: 20px 30px;
-  padding: 20px;
-  box-shadow: 1px 1px 2px 8px gray;
+  
+  
   cursor: pointer;
+}
+
+.create-logo{
+	 box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 .menu-list-1,
@@ -243,8 +247,8 @@ li.menu-list:nth-child(5) {
 }
 
 .create-card-img {
-  width: 290px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   display: block;
   margin: 0 auto;
 }
