--- a/WebContent/assets/css/notification/notificationRead.css
+++ b/WebContent/assets/css/notification/notificationRead.css
@@ -38,6 +38,11 @@ h1{
     margin: 10px 10px;
 }
 
+.else{
+ white-space : pre-line; /* 엔터,공백처리 */
+}
+ 
+
 .else>p{
     margin: 20px 35px;
     font-size: 20px;
@@ -82,6 +87,9 @@ h1{
   font-size: 17px;
   background-color:  rgb(40, 125, 185);
 }
+
+
+
 
 footer{
     width: 100%;
