--- a/WebContent/assets/css/ani.css
+++ b/WebContent/assets/css/ani.css
@@ -1,10 +1,7 @@
-*{
-  background-color: rgb(255, 255, 245);
-}
 
 hr {
   width: 85%;
-  color: rgb(217, 217, 217);
+  color:gray;
 }
 
 .main {
@@ -57,6 +54,7 @@ hr {
 .creations-title {
   width: 70%;
   align-items: center;
+  color : black;
 }
 
 .creations-btn {
@@ -67,10 +65,13 @@ hr {
 .creations-btn  > a {
   padding: 10px 7px;
   border-radius: 5px;
-  background-color: rgb(215, 215, 215);
   align-items: end;
   text-decoration: none;
-  color: black;
+  color : black;
+}
+
+.creations-btn > a:hover {
+	color : #ce97fa;
 }
 
 .main-container {
@@ -111,7 +112,7 @@ hr {
   width: 80px;
   background-color: rgb(213, 213, 213);
   text-decoration: none;
-  color: black;
+  color: white;
   border-radius: 5px;
   padding: 2px 5px;
 }
@@ -125,7 +126,7 @@ hr {
 
 .name > a {
   text-decoration: none;
-  color: grey;
+  color : black;
 }
 
 .creations-main2 > section {
@@ -139,24 +140,26 @@ hr {
 
 .creations-img {
   /* border: 0.3px solid gray; */
+  /* box-shadow: 0 0 15px 0 rgb(249, 249, 249), 0 5px 5px 0 rgb(249, 249, 249); */
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 .creations-img > img {
   width: 350px;
-  height: 350px;
+  height: 300px;
   align-items: center;
 }
 
-.creaions-sub {
+.creations-sub {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 5px;
 }
 
 .sub-author {
   display: flex;
-  padding: 5px 5px;
+  padding: 5px 10px;
+  /* background: black; */
 }
 
 .sub-author > img {
@@ -164,25 +167,70 @@ hr {
   height: 30px;
 }
 
-.sub-author > a {
+.sub-author-img {
+  width: 30px;
+  height: 30px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.sub-author-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.sub-author-name > a {
   padding: 5px;
   text-decoration: none;
-  color: black;
+  color : black;
 }
 
 .sub-title {
-  padding: 20px 0 10px 10px;
+  padding: 8px 0 10px 10px;
   font-size: 20px;
   font-weight: bold;
+ /*  background: black; */
 }
 
 .sub-title > a {
   text-decoration: none;
-  color: black;
+  color : black;
 }
 
 .creations-sub {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  /* background: black; */
+}
+
+.creation-like ,
+.creation-comment {
+	display: flex;
+    align-items: center;
+}
+
+.creation-like {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-like > img{
+  width: 20px;
+  height: 20px;
+}
+
+.creation-comment {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-comment > img{
+  width: 22px;
+  height: 22px;
+}
+
+.count {
+	margin : 0 5px;
 }
