--- a/WebContent/assets/css/creations/background.css
+++ b/WebContent/assets/css/creations/background.css
@@ -4,7 +4,7 @@
 
 hr {
   width: 85%;
-  color: rgb(217, 217, 217);
+  color: gary;
 }
 
 .main {
@@ -67,10 +67,13 @@ hr {
 .creations-btn  > a {
   padding: 10px 7px;
   border-radius: 5px;
-  background-color: rgb(215, 215, 215);
-  align-content: end;
+  align-items: end;
   text-decoration: none;
-  color: black;
+  color : black;
+}
+
+.creations-btn > a:hover {
+	color : #ce97fa;
 }
 
 .main-container {
@@ -89,7 +92,7 @@ hr {
 }
 
 .img {
-  width: 450px;
+  width: 430px;
   height: 360px;
   margin: 10px;
   padding: 15px;
@@ -109,7 +112,7 @@ hr {
 
 .editbtn > a {
   width: 80px;
-  background-color: rgb(213, 213, 213);
+  background-color: rgb(255, 255, 255);
   text-decoration: none;
   color: black;
   border-radius: 5px;
@@ -125,7 +128,7 @@ hr {
 
 .name > a {
   text-decoration: none;
-  color: grey;
+  color: black;
 }
 
 .creations-main2 > section {
@@ -148,7 +151,7 @@ img {
 }
 
 .creations-img > img {
-  width: 450px;
+  width: 430px;
   height: 230px;
   align-items: center;
 }
@@ -156,12 +159,13 @@ img {
 .creations-sub {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 7px 0px;
 }
 
 .sub-author {
   display: flex;
-  padding: 5px 5px;
+  padding: 5px 8px;
+  align-items: center;
 }
 
 .sub-author > img {
@@ -169,14 +173,14 @@ img {
   height: 30px;
 }
 
-.sub-author > a {
-  padding: 5px;
+.sub-author  a {
+  padding: 5px 8px;
   text-decoration: none;
   color: black;
 }
 
 .sub-title {
-  padding: 20px 0 10px 10px;
+  padding: 8px 0 7px 10px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -184,4 +188,60 @@ img {
 .sub-title > a {
   text-decoration: none;
   color: black;
+}
+
+.sub-author-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.sub-author  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.sub-author-name  a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+/* .creations-sub {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background: black;
+} */
+
+.creation-like ,
+.creation-comment {
+	display: flex;
+    align-items: center;
+}
+
+.creation-like {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-like > img{
+  width: 20px;
+  height: 20px;
+}
+
+.creation-comment {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-comment > img{
+  width: 22px;
+  height: 22px;
+}
+
+.count {
+	margin : 0 5px;
 }
