--- a/WebContent/assets/css/information.css
+++ b/WebContent/assets/css/information.css
@@ -29,120 +29,6 @@ header {
 	flex-direction: column;
 }
 
-.header-box {
-	display: flex;
-	justify-content: center;
-	height: 150px;
-	width: 1500px;
-}
-
-.main-header-box {
-	display: block;
-	align-items: center;
-	width: 40%;
-}
-
-.main-nav-box {
-	height: 50%;
-	width: 100%;
-}
-
-.logo>img {
-	width: 230px;
-	height: 100px;
-}
-
-.nav {
-	align-items: center;
-	text-align: center;
-	width: 100%;
-	height: 40%;
-	padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 100%;
-}
-
-.dropbtn1, .dropbtn2, .dropbtn3, .dropbtn4 {
-	color: black;
-	/* padding: 16px; */
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-	list-style: none;
-	width: 150px;
-}
-
-.dropdown1, .dropdown2, .dropdown3, .dropdown4 {
-	display: inline-block;
-	/* height: 150px; */
-	position: relative;
-}
-
-.dropdown-content1, .dropdown-content2, .dropdown-content3,
-	.dropdown-content4 {
-	display: none;
-	background-color: #f9f9f9;
-	max-width: 140px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	position: absolute;
-}
-
-.dropdown-content1>a, .dropdown-content2>a, .dropdown-content3>a,
-	.dropdown-content4>a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-
-.dropdown-content1>a:hover, .dropdown-content2>a:hover,
-	.dropdown-content3>a:hover, .dropdown-content4>a:hover {
-	background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1, .dropdown2:hover .dropdown-content2,
-	.dropdown3:hover .dropdown-content3, .dropdown4:hover .dropdown-content4
-	{
-	display: block;
-}
-
-.dropdown1:hover .dropbtn1, .dropdown2:hover .dropbtn2, .dropdown3:hover .dropbtn3,
-	.dropdown4:hover .dropbtn4 {
-	background-color: ivory;
-}
-
-.btn-box {
-	width: 100px;
-	display: block;
-	justify-content: center;
-}
-
-.login-box {
-	height: 10%;
-}
-
-.login-btn {
-	padding: 2px;
-	height: 20px;
-	justify-content: center;
-	align-items: center;
-	background-color: rgb(198, 133, 238);
-	color: black;
-	border-radius: 5px;
-	text-decoration-line: none;
-}
-
-.category {
-	color: gray;
-	text-decoration-line: none;
-	cursor: pointer;
-}
-
 /* section */
 fieldset {
 	padding: 50px;
@@ -183,9 +69,14 @@ fieldset {
 }
 
 .info-pw {
-	display: flex;
+/* 	display: block;
 	justify-content: space-between;
-	margin-bottom: 10px;
+	margin-bottom: 10px; */
+	display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .info-phone {
@@ -225,12 +116,12 @@ input[type="text"], input[type="password"] {
 	box-sizing: border-box;
 	margin-bottom: 10px;
 	margin-left: 30px;
-	width: 500px;
+	width: 58%;
 }
 
 textarea {
 	resize: none;
-	width: 500px;
+	width: 340px;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 }
@@ -242,6 +133,7 @@ textarea {
 
 .user-delete>a {
 	color: gray;
+	text-decoration : none;
 }
 
 .user-delete>a:hover {
@@ -251,17 +143,52 @@ textarea {
 
 .cencel-save>button {
 	margin: 0 50px;
-	background-color: rgb(198, 133, 238);
+	/* background-color: rgb(198, 133, 238); */
 	width: 50px;
 	height: 30px;
-	outline: 0;
-	border: 0;
+	border: 1px solid gray;
 	cursor: pointer;
+	border-radius : 8px;
+	color : gray;
+}
+
+.cencel-save a {
+	color : gray;
+	text-decoration : none;
+}
+
+.cencel-save a:hover {
+	color : #ce97fa;
+}
+
+.cencel-save > button:hover {
+	border: 1px solid #ce97fa;
+	color : #ce97fa;
 }
 
 .pfp-input {
   display: none;
 }
 
+.info {
+	display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 
+.count {
+	font-size : 10px;
+}
 
+label {
+	width : 20%
+}
+
+span {
+	width : 10%
+}
+
+.info-pw-sub > span {
+	font-size : 10px;
+	color : red;
+}
