--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -1,26 +1,23 @@
 * {
-  margin: 0px;
-  padding: 0px;
-}
-
-body {
-background-color: #fffff8;
+/*   margin: 0px;
+  padding: 0px; */
 }
 
 a {
   text-decoration: none;
+  color : black;
 }
 
 .a__inline-block {
   display: inline-block;
 }
 
-body > hr {
+/* body > hr {
   width: 60%;
   margin-top: 20px;
   margin-bottom: 30px;
 }
-
+ */
 main {
   width: 95%;
   display: block;
@@ -37,135 +34,6 @@ header {
   flex-direction: column;
 }
 
-.header-box {
-  display: flex;
-  justify-content: center;
-  height: 150px;
-  width: 1500px;
-}
-
-.main-header-box {
-  display: block;
-  align-items: center;
-  width: 40%;
-}
-
-.main-nav-box {
-  height: 50%;
-  width: 100%;
-}
-
-.logo > img {
-  width: 230px;
-  height: 100px;
-}
-
-.nav {
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 40%;
-  padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-}
-
-.dropbtn1,
-.dropbtn2,
-.dropbtn3,
-.dropbtn4 {
-  color: black;
-  /* padding: 16px; */
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  list-style: none;
-  width: 150px;
-}
-
-.dropdown1,
-.dropdown2,
-.dropdown3,
-.dropdown4 {
-  display: inline-block;
-  /* height: 150px; */
-  position: relative;
-}
-
-.dropdown-content1,
-.dropdown-content2,
-.dropdown-content3,
-.dropdown-content4 {
-  display: none;
-  background-color: #f9f9f9;
-  max-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  position: absolute;
-}
-
-.dropdown-content1 > a,
-.dropdown-content2 > a,
-.dropdown-content3 > a,
-.dropdown-content4 > a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content1 > a:hover,
-.dropdown-content2 > a:hover,
-.dropdown-content3 > a:hover,
-.dropdown-content4 > a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1,
-.dropdown2:hover .dropdown-content2,
-.dropdown3:hover .dropdown-content3,
-.dropdown4:hover .dropdown-content4 {
-  display: block;
-}
-
-.dropdown1:hover .dropbtn1,
-.dropdown2:hover .dropbtn2,
-.dropdown3:hover .dropbtn3,
-.dropdown4:hover .dropbtn4 {
-  background-color: ivory;
-}
-
-.btn-box {
-  width: 100px;
-  display: block;
-  justify-content: center;
-}
-
-.login-box {
-  height: 10%;
-}
-
-.login-btn {
-  padding: 2px;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
-}
-
-.category {
-  color: gray;
-  text-decoration-line: none;
-  cursor: pointer;
-}
-
 /* @media screen and(min-width : 320px ) {
   section {
     background-color: whitesmoke;
@@ -175,7 +43,7 @@ header {
 /* section */
 
 .category-container {
-  border-bottom: 0.5px solid rgb(221, 220, 220);
+  /* border-bottom: 0.5px solid rgb(221, 220, 220); */
 }
 
 .category-menu {
@@ -225,12 +93,10 @@ li.menu-list:nth-child(5) {
 }
 
 .create-card {
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
   width: 300px;
-  height: 300px;
+  height: 440px;
   margin: 20px 30px;
-  
-  
   cursor: pointer;
 }
 
@@ -248,7 +114,7 @@ li.menu-list:nth-child(5) {
 
 .create-card-img {
   width: 300px;
-  height: 300px;
+  height: 250px;
   display: block;
   margin: 0 auto;
 }
@@ -261,13 +127,13 @@ li.menu-list:nth-child(5) {
 }
 
 .like-icon-img {
-  width: 25px;
-  height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .reply-icon-img {
-  width: 25px;
-  height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .icon-box {
@@ -282,17 +148,25 @@ li.menu-list:nth-child(5) {
 }
 
 .create-title > h4 {
-  margin: 5px auto;
-  padding: 0 5px;
+  margin: 5px 10px;
+  /* background: black; */
+/*   padding: 0 5px; */
 }
 
 .create-people {
   margin: 5px 0;
-  padding: 0 5px;
+  padding: 0 10px;
+}
+
+.create-people > a {
+	display: flex;
+	align-items: center;
+	/* background: black; */
 }
 
 .icon-box {
   margin: 5px 0;
+  padding: 10px;
 }
 
 .handpen-img,
@@ -303,3 +177,123 @@ li.menu-list:nth-child(5) {
   width: 60px;
   height: 60px;
 }
+
+.create-img {
+	width: 40px;
+    height: 40px;
+    border-radius: 70%;
+    overflow: hidden;
+}
+
+.create-img > img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.a__inline-block {
+    display: flex;
+    align-items: center;
+}
+
+.count {
+	margin: 0 5px;
+}
+
+.icon-like ,
+.icon-comment {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create-name {
+	padding : 0 5px;
+}
+
+/* 배경화면 사이즈 */
+.img {
+  width: 430px;
+  height: 360px;
+  margin: 10px;
+  padding: 15px;
+  /* border: 1px solid rgb(205, 205, 205); */
+}
+
+.likes ,
+.comment {
+  width: 20px;
+  height: 20px;
+}
+
+.mypage-name {
+  width: 70%;
+  height: 60%;
+}
+
+.editbtn > a {
+  width: 80px;
+  background-color: rgb(255, 255, 255);
+  text-decoration: none;
+  color: white;
+  border-radius: 5px;
+  padding: 2px 5px;
+}
+
+.click {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.name > a {
+  text-decoration: none;
+  color: white;
+}
+
+.creations-img {
+  /* border: 0.3px solid gray; */
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.creation-img  {
+  width: 430px;
+  height: 230px;
+  align-items: center;
+}
+
+.creations-sub {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.sub-author {
+  display: flex;
+  padding: 5px 5px;
+}
+
+.sub-author > a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+.sub-title {
+  padding: 0px 0 10px 10px;
+  font-size: 18px;
+  font-weight: bold;
+  height: 15px;
+}
+
+.sub-title > h4 {
+	margin : 5px -1px;
+}
+
+.sub-title > a {
+  text-decoration: none;
+  color: black;
+}
+
+
