--- a/WebContent/assets/css/mypage/mypage-follow.css
+++ b/WebContent/assets/css/mypage/mypage-follow.css
@@ -11,7 +11,6 @@ section {
   width: 100%;
 }
 
-
 .main{
   display: flex;
   justify-content: space-between;
@@ -26,6 +25,19 @@ section {
   display: flex;
   align-items: center;
   color: white;
+}
+
+.mypage-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.mypage-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .main-container {
@@ -77,13 +89,30 @@ section {
   height: 60%;
 }
 
-.editbtn > a {
+.editbtn > a{
   width: 80px;
-  background-color: rgb(213, 213, 213);
+  /* background-color: rgb(213, 213, 213); */
   text-decoration: none;
   color: black;
   border-radius: 5px;
   padding: 2px 5px;
+}
+
+.editbtn > a:hover {
+	color : #ce97fa;
+}
+
+.editbtn1 > a {
+  width: 80px;
+  /* background-color: rgb(213, 213, 213); */
+  text-decoration: none;
+  color: black;
+  border-radius: 5px;
+  padding: 2px 5px;
+}
+
+.editbtn1 > a:hover {
+	color : #ce97fa;
 }
 
 .click {
@@ -98,48 +127,9 @@ section {
   color: grey;
 }
 
-
-/* .creations-main {
-  padding: 10px 10px;
-  margin-left: 60px;
-  margin: 20px 30px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-
+.name > a:hover{
+	color : #ce97fa;
 }
-
-.creations-main > section {
-  width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-img {
-  width: 70px;
-  height: 70px;
-}
-
-.creaions-img > img {
-  width: 300px;
-  height: 230px;
-  align-items: center;
-}
-
-.creaions-sub {
-  display: flex;
-  justify-content: space-between;
-}
-
-.mypage-main > .mypage-box {
-  width: 65%;
-  text-align: left;
-} */
 
 .creations-main {
   padding: 5px 10px;
