--- a/WebContent/assets/css/upload.css
+++ b/WebContent/assets/css/upload.css
@@ -9,6 +9,7 @@ label {
   align-content: center;
   flex-direction: column;
   flex-wrap: wrap;
+  align-content: flex-end;
 }
 
 .creations-main > div {
@@ -52,7 +53,7 @@ label {
 }
 
 .creations-title > input[type='text']{
-  width: 100%;
+  width: 80%;
   height: 30px;
   padding: 10px;
   border: 1px solid #e0e0e0;
@@ -66,7 +67,7 @@ label {
 #creations-content {
   /* width: 100%;
   height: 500px; */
-  width: 100%;
+  width: 80%;
   padding: 10px;
   border: 1px solid #e0e0e0;
   border-radius: 5px;
@@ -77,16 +78,6 @@ textarea {
   resize: none;
   width: 120%;
 }
-
-
-/* .file-upload {
-  width: 30%;
-  background-color: lightblue;
-}
-
-.creations-upload-img > input{
-  background-color: lightblue;
-} */
 
 /* 이미지 업로드 스타일 */
 svg {
@@ -100,7 +91,11 @@ svg {
   background-color: white;
   padding: 13px;
   position: relative;
-  width: 98%;
+  width: 79%;
+}
+
+.image-upload-box {
+	background-color :white;
 }
 
 .upload-text {
@@ -109,11 +104,13 @@ svg {
   margin: 4px;
   font-size: 12px;
   color: rgb(158, 158, 158);
+   background-color :white;
 }
 
 .upload-text:first-child {
   color: black;
   font-weight: bold;
+ 
 }
 
 .upload-text:last-child {
@@ -126,7 +123,7 @@ svg {
 }
 
 input[type='file'] {
-  width: 100%;
+  width: 80%;
   height: 100%;
   position: absolute;
   top: 0;
@@ -180,6 +177,7 @@ input[type='file'] {
 }
 
 .submit-btn {
+  width : 80%;
   display: flex;
   align-content: center;
   flex-wrap: wrap;
@@ -188,7 +186,28 @@ input[type='file'] {
 
 .submit-btn > button {
   margin: 0 10px;
-  background-color: lightblue;
-  border: 0.3px solid lightblue;
-  border-radius: 6px;
+  padding : 5px 5px;
+  border: 1px solid #e3dede;
+  border-radius: 12px;
+  cursor: pointer;
 }
+
+.submit-btn > button:hover{
+	border : 1px solid #8221ce;
+  color: #8221ce;
+}
+
+
+.main-title {
+	display: flex;
+    align-items: center;
+}
+
+.creations-sub-main {
+	width: 83%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
