--- a/WebContent/assets/css/community/communityList.css
+++ b/WebContent/assets/css/community/communityList.css
@@ -1,323 +1,129 @@
-* {
-  /* margin: 10px;
-  padding: 10px 0; */
- background-color: rgb(255, 255, 247);
-
+*{
+    margin: 0;
+    padding: 0;
+    background-color : #fffcfc;
 }
 
-
-
-main {
-  width: 95%;
-  display: block;
-  /* padding-left: 150px; */
-  /* display: flex;
-  justify-content: center; */
+.writer-btn{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin: 50px 340px;
 }
 
-header{
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 40px;
+.writer-btn>a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
 }
 
-.header-box {
-  display: flex;
-  justify-content: center;
-  height: 150px;
-  width: 1500px;
-  margin: 0 250px;
-
+.writer-btn a:hover {
+  border-color: #B4AEE8;
+  color: #B4AEE8;
 }
 
-.main-header-box{
-  display: block;
-  align-items: center;
-  width: 40%; 
-}
-
-.main-nav-box{
-  height: 50%;
-  width: 100%;
-}
-
-.logo > img {
-  width: 230px;
-  height: 100px;
-}
-
-.nav{
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 40%;
-  padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-}
-
-.dropbtn1 ,
-.dropbtn2 ,
-.dropbtn3 ,
-.dropbtn4 {
-  color: black;
-  /* padding: 16px; */
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  list-style: none;
-  width: 150px;
-}
-
-
-.dropdown1,
-.dropdown2,
-.dropdown3,
-.dropdown4 {
-  display: inline-block;
-  /* height: 150px; */
-  position: relative;
-}
-
-.dropdown-content1 ,
-.dropdown-content2 ,
-.dropdown-content3 ,
-.dropdown-content4 {
-  display: none;
-  background-color: #f9f9f9;
-  max-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  position: absolute;
-}
-
-.dropdown-content1 > a,
-.dropdown-content2 > a,
-.dropdown-content3 > a,
-.dropdown-content4 > a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content1 > a:hover,
-.dropdown-content2 > a:hover,
-.dropdown-content3 > a:hover,
-.dropdown-content4 > a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1,
-.dropdown2:hover .dropdown-content2,
-.dropdown3:hover .dropdown-content3,
-.dropdown4:hover .dropdown-content4 {
-  display: block;
-}
-
-.dropdown1:hover .dropbtn1,
-.dropdown2:hover .dropbtn2,
-.dropdown3:hover .dropbtn3,
-.dropdown4:hover .dropbtn4 {
-  background-color: ivory
-}
-
-.btn-box {
-  
-  justify-content: center;
-  align-items: center;
-  margin: 10px -80px;
-}
-
-.header-box>.btn-box{
-  display: flex;
-  width: 400px;
-}
-
-.btn-box>.login-btn{
-  margin-right: -7px;
-  width: 70px;
-  height: 25px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
-  text-align: center;
-  font-weight: bold;
-  padding: 2px;
-}
-
-
-.btn-box>.login2-btn{
-  width: 50px;
-  padding: 2px;
-  height: 25px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
-  text-align: center;
-  font-weight: bold;
-  
-}
-
-.category {
-  color: gray;
-  text-decoration-line: none;
-  cursor: pointer;
-}
-
-.header-box>.logo{
-  margin: 0 20px;
-}
-
-.nav>.drop-box{
-  margin: 0 30px;
-}
-
-.logo>img{
-  margin-top: -20px;
-  margin-left: -30px;
-}
-
-.btn-box>a{
-
-  margin: 0 20px;
-}
-
-section{
-  height: 1000px;
-}
-
-section>.big-box{
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  height: 1000px;
-  margin: 310px;
-  margin-top: 30px;
-  border: 1px solid #ebeef1;
-  
-  background-color: white;
+.big-box{
+    /* border: 1px solid rgb(231, 228, 228); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
+    margin : 70px 0;
 }
 
 .big-box>.menu{
-  display: flex;
-  justify-content: center;
-  /* background-color: rgb(238, 231, 235); */
-  margin-top: 15px;
-  height: 55px;
-  margin-bottom: 10px;
-   background-color: white;
+    display: flex;
+    font-size: 10px;
+   justify-content: space-around;
+    align-items: center;
+    height: 30px;
+    border-bottom: 1px solid #B4AEE8;
+    width: 65%;
+    list-style-type: none;
 }
 
-.menu>h1{
-  height: 3px;
-  width: 100%;
-  padding: 1px 80px;
-  font-size: 18px;
-  /* background-color: rgb(238, 231, 231); */
-  margin-left: 10px;
-   background-color: white;
-}
 
-.big-box>.small-box{
-  margin: 0 18px;
-  margin-top: 10px;
-  
-  width: 1350px;
-  /* height: 700px; */
-  background-color: white;
-  border-top: 1px solid rgb(223, 220, 220);
-/*   border-bottom: 9px solid #6c9cc2; */
+.small-box{
+    margin: 20px 0;
+    /* border: 1px solid rgb(231, 228, 228); */
+    height: 300px;
+    width: 65%;
 }
 
 .small-box>.table{
-  display: flex;
-  /* border: 1px solid rgb(226, 223, 223); */
-   background-color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 1px solid rgb(231, 228, 228); */
+    list-style-type: none;
+    border-bottom: 1px solid rgb(231, 228, 228);
+    height : 40px;
+    width : 100%;
 }
 
+
 .table>.name{
-  width: 160px;
-  height: 114.5px;
-   background-color: white;
+    text-align: center;
+    /* border: 1px solid rgb(231, 228, 228); */
+    width: 198px;
+    height: 30px;
 }
 
 .name>h1{
-  width: 100%;
-  font-size: 15px;
-  padding: 35px 10px;
-  margin-left: 47px;
-   background-color: white;
+	font-size : 13px;
 }
 
-.comment>h1{
-  width: 60px;
-  margin: 47px 100px;
-  font-size: 15px;
-  margin-right: 22px;
-   background-color: white;
-}
-
-.cnt>h1{
-  width: 85px;
-  margin: 47px 60px;
-  font-size: 15px;
-   background-color: white;
-}
-
-.comment{
-	 background-color: white;
-}
-
-.cnt{
-	 background-color: white;
-}
-
-.date>h1{
-  width: 85px;
-  margin: 47px 170px;
-  font-size: 15px;
-   background-color: white;
-}
-
-.title{
-	 background-color: white;
-}
-
-.date{
-	 background-color: white;
+.table>.title{
+    text-align: center;
+    width: 198px;
+    /* border: 1px solid rgb(231, 228, 228); */
+    height: 30px;
 }
 
 .title>h1{
-  width: 200px;
-  margin: 47px 170px;
-  font-size: 15px;
-  margin-right: 20px;
-   background-color: white;
+	font-size : 13px;
 }
 
+.table>.comment{
+    width: 192px;
+    text-align: center;
+    /* border: 1px solid rgb(231, 228, 228); */
+    height: 30px;
+}
 
+.comment>h1{
+	font-size : 13px;
+}
+
+.table>.date{
+    text-align: center;
+    width: 196px;
+    /* border: 1px solid rgb(231, 228, 228); */
+    height: 30px;
+}
+
+.date>h1{
+	font-size : 13px;
+}
+
+.table>.cnt{
+    width: 200px;
+    text-align: center;
+    /* border: 1px solid rgb(231, 228, 228); */
+}
+
+.cnt>h1{
+	font-size : 13px;
+}
 
 .pagination {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -170px;
   margin-right : 80px;
-   background-color: white;
-   width: 500px;
-    margin: -100px 710px;
+   background-color : #fffcfc;
+
 }
 
 .pagination > ul {
@@ -334,30 +140,28 @@ section>.big-box{
   padding: 10px;
   margin: 0 5px;
   border-radius: 5px;
-  border: 1px solid #333;
+  border: 1px solid rgb(231, 228, 228);
   transition: background-color 0.3s ease, color 0.3s ease;
    background-color: white;
 }
 
 .pagination a:hover {
-  background-color: #6c9cc2;
-  border-color: #6c9cc2 ;
-  color: #fff;
+  background-color: #B4AEE8;
+  border-color: #B4AEE8;
+  color: black;
 }
 
 .pagination .active {
-  background-color: #333;
-  border-color: #333;
+  background-color: rgb(231, 228, 228);
+  border-color: rgb(231, 228, 228);
   color: #fff;
 }
 
-footer{
-  height: 300px;
-}
+
 
 .small-box>.table2{
-	font-size : 20px;
-	padding : 339px;
+	font-size : 15px;
+	
 }
 
 a{
