--- a/WebContent/assets/css/member/findId.css
+++ b/WebContent/assets/css/member/findId.css
@@ -1,333 +1,359 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+@import
+	url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import
+	url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
-* {font-family: 'Nanum Gothic', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  border: 0px solid silver;
+@import
+	url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap')
+	;
+
+@import
+	url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap')
+	;
+
+* {
+	font-family: 'Nanum Gothic', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	border: 0px solid silver;
 }
 
 img {
-  width: 100px;
+	width: 100px;
 }
 
 body {
-font-family: 'Nanum Gothic', sans-serif;
-  font-size: 0.7rem;
-  color: #999;
-  line-height: 1rem;
-  letter-spacing: 0.1px;
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 0.7rem;
+	color: #999;
+	line-height: 1rem;
+	letter-spacing: 0.1px;
 }
 
 h1, h2, h3 {
-font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 
 h1 {
-  font-size: 4rem;
-  line-height: 4rem;
-  text-transform: uppercase;
+	font-size: 4rem;
+	line-height: 4rem;
+	text-transform: uppercase;
 }
 
 h2 {
-  font-size: 2.4rem;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
+	font-size: 2.4rem;
+	margin-bottom: 2rem;
+	text-transform: uppercase;
 }
 
 h3 {
-  font-size: 1.4rem;
-  margin-bottom: 1rem;
+	font-size: 1.4rem;
+	margin-bottom: 1rem;
 }
 
 h4, h5 {
-font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 
 h4 {
-  font-size: 1.1rem;
-  line-height: 1.4rem;
+	font-size: 1.1rem;
+	line-height: 1.4rem;
 }
 
 h5 {
-  font-size: 0.7rem;
-  line-height: 2rem;
+	font-size: 0.7rem;
+	line-height: 2rem;
 }
 
-a:link { color: #666; text-decoration: none;}
-a:visited { color: #666;}
-a:hover { color: red;}
-a:active { color: red;}
+a:link {
+	color: #666;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #666;
+}
+
+a:hover {
+	color: red;
+}
+
+a:active {
+	color: red;
+}
 
 button {
-  font-size: 0.7rem;
-  text-transform: uppercase;
-  padding: 10px 30px;
-  border: 1px solid #ccc;
-  background: white;
-  transition: 0.3s;
+	font-size: 0.7rem;
+	text-transform: uppercase;
+	padding: 10px 30px;
+	border: 1px solid #ccc;
+	background: white;
+	transition: 0.3s;
 }
 
 button:hover {
-  background: crimson;
-  color: white;
-  cursor: pointer;
+	background: crimson;
+	color: white;
+	cursor: pointer;
 }
 
 /* start */
 
 /* start */
-
 .head2 {
-  height: 30px;
-padding: 8px 7%;
-}
-.head2 .aa {
-  margin-left: 40px;
-  float: right;
-  color: #666;
-  font-size: 0.8rem;
-  cursor: pointer;
+	height: 30px;
+	padding: 8px 7%;
 }
 
-header{
-  height: 70px;
-  border-top: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
+.head2 .aa {
+	margin-left: 40px;
+	float: right;
+	color: #666;
+	font-size: 0.8rem;
+	cursor: pointer;
 }
+
+header {
+	height: 70px;
+	border-top: 1px solid #aaa;
+	border-bottom: 1px solid #aaa;
+}
+
 header>div {
-  display: flex;
-  justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
-.headerlogo{
-  margin-top: 1rem;
-  height: 30px;
+
+.headerlogo {
+	margin-top: 1rem;
+	height: 30px;
 }
 
 header .aa2 {
-  margin: 0 30px;
-  line-height: 4.3rem;
-  font-size: 0.9rem;
-  color: #666;
+	margin: 0 30px;
+	line-height: 4.3rem;
+	font-size: 0.9rem;
+	color: #666;
 }
 
-
-header .aa2{
-  margin: 0 30px;
-  line-height: 4.3rem;
-  font-size: 0.9rem;
-  color: #666;
-  position: relative;
-display: inline-block;
-text-decoration: none;
-letter-spacing: 1.8px;
-
-overflow: hidden;
-text-transform: uppercase;
-cursor: pointer;
+header .aa2 {
+	margin: 0 30px;
+	line-height: 4.3rem;
+	font-size: 0.9rem;
+	color: #666;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+	letter-spacing: 1.8px;
+	overflow: hidden;
+	text-transform: uppercase;
+	cursor: pointer;
 }
 
 header .aa2:before {
-   content: '';
-   width: 100%;
-   height: 4px;
-   position: absolute;
-   bottom: 20px;
-   left: calc(-101%);
-   background: #e91e63;
-   transition: 0.3s ease-in-out;
+	content: '';
+	width: 100%;
+	height: 4px;
+	position: absolute;
+	bottom: 20px;
+	left: calc(-101%);
+	background: #e91e63;
+	transition: 0.3s ease-in-out;
 }
 
 header .aa2:hover:before {
-   left: 0;
-  color: #666;
-  border-bottom: none;
+	left: 0;
+	color: #666;
+	border-bottom: none;
 }
 
 header .aa2:hover {
-   left: 0;
-  color: #666;
-text-decoration: none;
+	left: 0;
+	color: #666;
+	text-decoration: none;
 }
-
 
 .headerform input {
-  position: relative;
-padding: 2px 10px;
-border: 1px solid #aaa;
-margin-top: 23px;
-margin-right: 10px;
+	position: relative;
+	padding: 2px 10px;
+	border: 1px solid #aaa;
+	margin-top: 23px;
+	margin-right: 10px;
 }
+
 .inputicon {
-  position: absolute;
-  margin-top:25px;
-    left: 50;
-     transform: translate(-190%, 10%);
-  left: 50;
-  width: 15px;
-  cursor: pointer;
+	position: absolute;
+	margin-top: 25px;
+	left: 50;
+	transform: translate(-190%, 10%);
+	left: 50;
+	width: 15px;
+	cursor: pointer;
 }
+
 .icon {
-  width: 20px;
-  margin-left: 15px;
-  vertical-align: top;
-  margin-top: 1.5rem;
-  cursor: pointer;
+	width: 20px;
+	margin-left: 15px;
+	vertical-align: top;
+	margin-top: 1.5rem;
+	cursor: pointer;
 }
-
-
-
 
 .fullpadding {
-  padding: 10rem 0;
+	padding: 10rem 0;
 }
 
 .tabs {
-  max-width: 550px;
-  margin: 0 auto;
-  margin-top: 1.3rem;
+	max-width: 550px;
+	margin: 0 auto;
+	margin-top: 1.3rem;
 }
+
 .tabs-nav li {
-  list-style: none;
-  float: left;
-  width: 100%;
-  border-top: 3px solid #666;
+	list-style: none;
+	float: left;
+	width: 100%;
+	border-top: 3px solid #666;
 }
+
 .tabs-nav li:first-child a {
-  border-right: 0;
-
+	border-right: 0;
 }
+
 .tabs-nav li:last-child a {
-
+	
 }
+
 #id {
-   background: #eee;
-   border: 1px solid #cecfd5;
-   display: block;
-
+	background: #eee;
+	border: 1px solid #cecfd5;
+	display: block;
 }
- a {
-  color: #eee;
-  font-weight: 600;
-  padding: 10px 0;
-  text-align: center;
-  text-decoration: none;
+
+a {
+	color: #eee;
+	font-weight: 600;
+	padding: 10px 0;
+	text-align: center;
+	text-decoration: none;
 }
 
 .tab-active a {
-  background: #fff;
-  border-bottom-color: transparent;
-  color: red; ;
-  cursor: default;
+	background: #fff;
+	border-bottom-color: transparent;
+	color: red;;
+	cursor: default;
 }
+
 .tabs-stage {
-  border: 1px solid #cecfd5;
-  border-top: 0;
-  clear: both;
-  padding: 3rem 4.6rem ;
-  position: relative;
-  top: -1px;
+	border: 1px solid #cecfd5;
+	border-top: 0;
+	clear: both;
+	padding: 3rem 4.6rem;
+	position: relative;
+	top: -1px;
 }
 
-
-.pwfind {
-width: 550px;
-margin: 0 auto;
-padding: 2rem 0;
+.idfind {
+	width: 550px;
+	margin: 0 auto;
+	padding: 2rem 0;
 }
+
 .small {
-  font-size: 0.7rem;
+	font-size: 0.7rem;
 }
+
 .idfind>div {
-  width: 550px;
-  margin: 0 auto;
+	width: 550px;
+	margin: 0 auto;
 }
 
 input {
-  margin-bottom: 1rem;
-  border: 1px solid #bbb;
+	margin-bottom: 1rem;
+	border: 1px solid #bbb;
 }
+
 .txt {
-  width:355.4px;
-  padding: 0.5rem 10px;
+	width: 355.4px;
+	padding: 0.5rem 10px;
 }
 
 .email {
-  width:170px;
-  padding: 0.5rem 10px;
+	width: 170px;
+	padding: 0.5rem 10px;
 }
 
 .phone {
-  width: 113.4px;
-    padding: 0.5rem 10px;
+	width: 113.4px;
+	padding: 0.5rem 10px;
 }
+
 select {
-    width:170px;
-    padding: 0.55rem 10px;
-    font-size: 0.7rem;
-    vertical-align: top;
-    border: 1px solid #bbb;
+	width: 170px;
+	padding: 0.55rem 10px;
+	font-size: 0.7rem;
+	vertical-align: top;
+	border: 1px solid #bbb;
 }
-
-
 
 .okbtn {
-  background-color: red;
-margin-left: 39%;
-margin-top: 1rem;
-color: #fff;
-transition: 0.3s;
+	background-color:#ce97fa;
+	margin-left: 39%;
+	margin-top: 1rem;
+	color: #fff;
+	transition: 0.3s;
 }
 
 .okbtn:hover {
-  background-color: #C31916;
-
-margin-top: 1rem;
-color: #fff;
+	background-color: #C31916;
+	margin-top: 1rem;
+	color: #fff;
 }
 
 /*2article tab*/
 .tabs2 {
-  max-width: 550px;
-  margin: 0 auto;
-  margin-top: 1.3rem;
+	max-width: 550px;
+	margin: 0 auto;
+	margin-top: 1.3rem;
 }
-.tabs-nav2 li {
-  list-style: none;
-  float: left;
-  width: 100%;
-  border-top: 3px solid #666;
-}
-.tabs-nav2 li:first-child a {
-  border-right: 0;
 
+.tabs-nav2 li {
+	list-style: none;
+	float: left;
+	width: 100%;
+	border-top: 3px solid #666;
 }
+
+.tabs-nav2 li:first-child a {
+	border-right: 0;
+}
+
 .tabs-nav>a {
-  background: #eee;
-  border: 1px solid #cecfd5;
-  color: #eee;
-  display: block;
-  font-weight: 600;
-  padding: 10px 0;
-  text-align: center;
-  text-decoration: none;
+	background: #eee;
+	border: 1px solid #cecfd5;
+	color: #eee;
+	display: block;
+	font-weight: 600;
+	padding: 10px 0;
+	text-align: center;
+	text-decoration: none;
 }
 
 .tab-active2 a {
-  background: #fff;
-  border-bottom-color: transparent;
-  color: red; ;
-  cursor: default;
+	background: #fff;
+	border-bottom-color: transparent;
+	color: red;;
+	cursor: default;
 }
+
 .tabs-stage2 {
-  border: 1px solid #cecfd5;
-  border-top: 0;
-  clear: both;
-  padding: 3rem 4.6rem ;
-  position: relative;
-  top: -1px;
+	border: 1px solid #cecfd5;
+	border-top: 0;
+	clear: both;
+	padding: 3rem 4.6rem;
+	position: relative;
+	top: -1px;
 }
