--- a/WebContent/assets/css/qna/qnaBoardList.css
+++ b/WebContent/assets/css/qna/qnaBoardList.css
@@ -1,337 +1,322 @@
 * {
-  /* margin: 10px;
+	/* margin: 10px;
   padding: 10px 0; */
-  background-color: rgb(255, 255, 245);
+	background-color: rgb(255, 255, 245);
 }
 
-body > hr {
-  width: 60%;
-  margin-top: 20px;
-  margin-bottom: 30px;
+body>hr {
+	width: 60%;
+	margin-top: 20px;
+	margin-bottom: 30px;
 }
 
 main {
-  width: 95%;
-  display: block;
-  /* padding-left: 150px; */
-  /* display: flex;
+	width: 95%;
+	display: block;
+	/* padding-left: 150px; */
+	/* display: flex;
   justify-content: center; */
 }
 
 header {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+	width: 100%;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 }
 
 .header-box {
-  display: flex;
-  justify-content: center;
-  height: 150px;
-  width: 1500px;
+	display: flex;
+	justify-content: center;
+	height: 150px;
+	width: 1500px;
 }
 
 .main-header-box {
-  display: block;
-  align-items: center;
-  width: 40%;
+	display: block;
+	align-items: center;
+	width: 40%;
 }
 
 .main-nav-box {
-  height: 50%;
-  width: 100%;
+	height: 50%;
+	width: 100%;
 }
 
-.logo > img {
-  width: 230px;
-  height: 100px;
+.logo>img {
+	width: 230px;
+	height: 100px;
 }
 
 .nav {
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 40%;
-  padding-top: 40px;
+	align-items: center;
+	text-align: center;
+	width: 100%;
+	height: 40%;
+	padding-top: 40px;
 }
 /* position 주기 */
 .drop-box {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
 }
 
-.dropbtn1,
-.dropbtn2,
-.dropbtn3,
-.dropbtn4 {
-  color: black;
-  /* padding: 16px; */
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  list-style: none;
-  width: 150px;
+.dropbtn1, .dropbtn2, .dropbtn3, .dropbtn4 {
+	color: black;
+	/* padding: 16px; */
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+	list-style: none;
+	width: 150px;
 }
 
-.dropdown1,
-.dropdown2,
-.dropdown3,
-.dropdown4 {
-  display: inline-block;
-  /* height: 150px; */
-  position: relative;
+.dropdown1, .dropdown2, .dropdown3, .dropdown4 {
+	display: inline-block;
+	/* height: 150px; */
+	position: relative;
 }
 
-.dropdown-content1,
-.dropdown-content2,
-.dropdown-content3,
-.dropdown-content4 {
-  display: none;
-  background-color: #f9f9f9;
-  max-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  position: absolute;
+.dropdown-content1, .dropdown-content2, .dropdown-content3,
+	.dropdown-content4 {
+	display: none;
+	background-color: #f9f9f9;
+	max-width: 140px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	position: absolute;
 }
 
-.dropdown-content1 > a,
-.dropdown-content2 > a,
-.dropdown-content3 > a,
-.dropdown-content4 > a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+.dropdown-content1>a, .dropdown-content2>a, .dropdown-content3>a,
+	.dropdown-content4>a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
-.dropdown-content1 > a:hover,
-.dropdown-content2 > a:hover,
-.dropdown-content3 > a:hover,
-.dropdown-content4 > a:hover {
-  background-color: #f1f1f1;
+.dropdown-content1>a:hover, .dropdown-content2>a:hover,
+	.dropdown-content3>a:hover, .dropdown-content4>a:hover {
+	background-color: #f1f1f1;
 }
 
-.dropdown1:hover .dropdown-content1,
-.dropdown2:hover .dropdown-content2,
-.dropdown3:hover .dropdown-content3,
-.dropdown4:hover .dropdown-content4 {
-  display: block;
+.dropdown1:hover .dropdown-content1, .dropdown2:hover .dropdown-content2,
+	.dropdown3:hover .dropdown-content3, .dropdown4:hover .dropdown-content4
+	{
+	display: block;
 }
 
-.dropdown1:hover .dropbtn1,
-.dropdown2:hover .dropbtn2,
-.dropdown3:hover .dropbtn3,
-.dropdown4:hover .dropbtn4 {
-  background-color: ivory;
+.dropdown1:hover .dropbtn1, .dropdown2:hover .dropbtn2, .dropdown3:hover .dropbtn3,
+	.dropdown4:hover .dropbtn4 {
+	background-color: ivory;
 }
 
 .btn-box {
-  width: 100px;
-  display: block;
-  justify-content: center;
+	width: 100px;
+	display: block;
+	justify-content: center;
 }
 
 .login-box {
-  height: 10%;
+	height: 10%;
 }
 
 .login-btn {
-  padding: 2px;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
+	padding: 2px;
+	height: 20px;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(198, 133, 238);
+	color: black;
+	border-radius: 5px;
+	text-decoration-line: none;
 }
 
 .category {
-  color: gray;
-  text-decoration-line: none;
-  cursor: pointer;
+	color: gray;
+	text-decoration-line: none;
+	cursor: pointer;
 }
 
 /* 일반 스타일 */
 body {
-  /* background-color: #f8f8f8; */
-  font-family: "Noto Sans KR", sans-serif;
+	/* background-color: #f8f8f8; */
+	font-family: "Noto Sans KR", sans-serif;
 }
 
 .container {
-  margin: 0 auto;
-  max-width: 1024px;
-  padding: 20px;
+	margin: 0 auto;
+	max-width: 1024px;
+	padding: 20px;
 }
 
 /* 헤더 영역 스타일 */
 header {
-  /* border-bottom: 1px solid #e0e0e0; */
+	/* border-bottom: 1px solid #e0e0e0; */
+	
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-  max-width: 1000px;
-  margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px 0;
+	max-width: 1000px;
+	margin: 0 auto;
 }
 
 .header-left {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .header-left h1 {
-  font-size: 2rem;
-  font-weight: bold;
+	font-size: 2rem;
+	font-weight: bold;
 }
 
 .header-right {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .btn-group {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .header a {
-  color: #333;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 30px;
-  border: 1px solid #333;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  margin-right: 10px;
+	color: #333;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 10px 20px;
+	border-radius: 30px;
+	border: 1px solid #333;
+	transition: background-color 0.3s ease, color 0.3s ease;
+	margin-right: 10px;
 }
 
 .header a:hover {
-  background-color: rgb(255, 87, 87);
-  color: white;
-  border-color: rgb(255, 87, 87);
+	background-color: rgb(255, 87, 87);
+	color: white;
+	border-color: rgb(255, 87, 87);
 }
 
 .header a:last-child {
-  margin-right: 0;
+	margin-right: 0;
 }
 
 /* 글 목록 테이블 스타일 */
 .board-table {
-  width: 100%;
-  margin-top: 20px;
-  border-collapse: collapse;
+	width: 100%;
+	margin-top: 20px;
+	border-collapse: collapse;
 }
 
-.board-table th,
-.board-table td {
-  padding: 10px;
-  border-bottom: 1px solid #e0e0e0;
+.board-table th, .board-table td {
+	padding: 10px;
+	border-bottom: 1px solid #e0e0e0;
 }
 
 .board-table th {
-  text-align: left;
-  font-weight: bold;
-  /* background-color: #f0f0f0; */
+	text-align: left;
+	font-weight: bold;
+	/* background-color: #f0f0f0; */
 }
 
 .board-table td {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 .board-table tr:last-child td {
-  border-bottom: none;
+	border-bottom: none;
 }
 
 .board-table tr:hover {
-  background-color: #f9f9f9;
+	background-color: #f9f9f9;
 }
 
 .board-table .no {
-  width: 5%;
+	width: 5%;
 }
 
 .board-table .title {
-  width: 50%;
+	width: 50%;
 }
 
 .board-table .author {
-  width: 10%;
+	width: 10%;
 }
 
 .board-table .date {
-  width: 20%;
+	width: 20%;
 }
 
 .board-table .hit {
-  width: 10%;
+	width: 10%;
 }
 
 /* 페이징 스타일 */
 .pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 50px;
 }
 
-.pagination > ul {
-  display: flex;
-  list-style: none;
+.pagination>ul {
+	display: flex;
+	list-style: none;
 }
 
 .pagination a {
-  color: #333;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 10px;
-  margin: 0 5px;
-  border-radius: 5px;
-  border: 1px solid #333;
-  transition: background-color 0.3s ease, color 0.3s ease;
+	color: #333;
+	text-decoration: none;
+	font-weight: bold;
+	padding: 10px;
+	margin: 0 5px;
+	border-radius: 5px;
+	border: 1px solid #333;
+	transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .pagination a:hover {
-  background-color: rgb(255, 87, 87);
-  border-color: rgb(255, 87, 87);
-  color: #fff;
+	background-color: rgb(255, 87, 87);
+	border-color: rgb(255, 87, 87);
+	color: #fff;
 }
 
 .pagination .active {
-  background-color: rgb(198, 133, 238);
-  border-color: rgb(198, 133, 238);
-  color: black;
+	background-color: #ce97fa;
+	border-color: #ce97fa;
+	color: black;
 }
 
 /* 글쓰기 버튼 스타일 */
 .write-btn-wrap {
-  text-align: right;
-  margin-top: 50px;
+	text-align: right;
+	margin-top: 50px;
 }
 
 .write-btn {
-  color: black;
-  background-color: rgb(198, 133, 238);
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  text-decoration: none;
+	color: black;
+	background-color: #ce97fa; padding : 10px 20px;
+	border-radius: 5px;
+	border: none;
+	transition: background-color 0.3s ease, color 0.3s ease;
+	text-decoration: none;
+	padding: 10px 20px;
 }
 
 .write-btn:hover {
-  background-color: rgb(255, 87, 87);
-  color: #fff;
+	background-color: rgb(255, 87, 87);
+	color: #fff;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+	text-decoration: none;
+	color: black;
 }
