--- a/WebContent/assets/css/community/communityRead.css
+++ b/WebContent/assets/css/community/communityRead.css
@@ -43,7 +43,6 @@
   .view-attach{
     width:65%;
     margin : 0 210px;
-   /*  border : 1px solid; */
   }
   
   
@@ -73,7 +72,6 @@
   .view-attach>.else{
     background-color: #fffcfc;
     border: 1px solid #fffcfc;
-   /*  margin: 50px 120px */;
     font-size: 17px;
     white-space : pre-line;
   }
@@ -110,19 +108,6 @@
   
   }
 
-  .small-box{
-    margin: 0px;
-    background-color:blanchedalmond;
-    height: 75px;
-    display: flex;
-  }
-  
-  .small-box>h1{
-    margin: 21px 95px;
-    background-color: blanchedalmond;
-    
-  }
-
   .comment2>.hello{
     border: 1px solid #fffcfc;
     
@@ -138,11 +123,11 @@
     width: 90%;
   }
 
-  .date>.none{
+  .date>.none1{
     border-right: 1px solid gray;
     width: 20px;
     height: 20px;
-    background-color:#fffcfc;
+    
   }
 
   .date>.fuck{
@@ -174,22 +159,23 @@
  background-color:#fffcfc;
  display: flex;
  width: 80%;
+ margin: 0 -150px;
 }
 
   .comment-btn>button{
-    border-radius: 10%;
-    margin: 15px 5px;
-    border: 1px solid #fffcfc;
-    background-color: burlywood;
+    border-radius: 12px;
+    margin: 15px 2px;
+    border: 1px solid #e4dfdf;
     font-weight: bold;
     font-size: 13.5px;
-  
+    color: #e4dfdf;
   }
 
   .commtent-sub {
     display: flex;
     justify-content: space-between;
     background-color:#fffcfc;
+    margin: -25px 0px 45px 15px;
   }
 
  
@@ -252,7 +238,7 @@
 }
 
 svg {
-   width: 2em; 
+   width: 1.5em; 
    height:-5em;
    fill: rgb(255,255,255);
    stroke-width: 1;
@@ -271,32 +257,23 @@ svg {
   border: 1px solid #fffcfc;
 }
 
-.edit:hover {
- color: #B4AEE8;
-}
-
-.list:hover {
- color: #B4AEE8;
-}
-
-.delete:hover {
- color: #B4AEE8;
-}
-
 .remove>.list{
   font-size: 17px;
 }
 
 .remove > .list:hover {
   cursor: pointer;
+   color: #B4AEE8;
 }
 
 .remove > .delete:hover {
   cursor: pointer;
+   color: #B4AEE8;
 }
 
 .remove > .edit:hover {
   cursor: pointer;
+   color: #B4AEE8;
 }
 
 .remove>.edit{
@@ -305,18 +282,26 @@ svg {
 
 .comment-btn>.comment-modify-ready:hover{
 	cursor : pointer;
+	color : #B4AEE8;
+	border-color : #B4AEE8;
 }
 
 .comment-btn>.comment-delete:hover{
 	cursor : pointer;
+	color : #B4AEE8;
+	border-color : #B4AEE8;
 }
 
 .comment-btn>.comment-modify:hover{
 	cursor : pointer;
+	color : #B4AEE8;
+	border-color : #B4AEE8;
 }
 
 .btn>.go:hover{
 	cursor:pointer;
+	color: #B4AEE8;
+	border-color: #B4AEE8;
 }
 
 .remove>.delete{
@@ -336,19 +321,21 @@ svg {
  }
  
   .go{
-  border-radius: 10%;
+  border-radius: 12px;
   margin: 15px 50px;
-  border: 1px solid #B4AEE8;
-  background-color: #B4AEE8;
+  border: 1px solid #e4dfdf;
   font-weight: bold;
   font-size: 17px;
- 
+  color: #e4dfdf;
+  width : 50px;
  }
+ 
 
 
  .btn{
   background-color: #fffcfc;
   margin-bottom: 10px;
+  margin: 0 900px;
  }
  
  .none{
@@ -372,8 +359,6 @@ svg {
    border-radius: 5px;
    resize: none;
 }
-
- 
 
 
   footer{
