--- a/WebContent/assets/css/member/findId2.css
+++ b/WebContent/assets/css/member/findId2.css
@@ -1,225 +1,223 @@
-html {
-	height: 100%;
-}
 
 body {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-	background: linear-gradient(#141e30, #243b55);
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+   background:#fffcfc;
 }
 
-.login-box {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 400px;
-	padding: 40px;
-	transform: translate(-50%, -50%);
-	background: rgba(0, 0, 0, 0.5);
-	box-sizing: border-box;
-	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-	border-radius: 10px;
+.login-box2 {
+display: flex;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
+    width: 400px;
+    padding: 40px;
+    /* transform: translate(-50%, -50%); */
+    background: linear-gradient(#000000 ,#434343);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px pink;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.login-box h2 {
-	margin: 0 0 30px;
-	padding: 0;
-	color: #fffcfc;
-	text-align: center;
+.login-box2 h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color:#ce97fa;
+  text-align: center;
+background: linear-gradient(#000000 ,#00000000);
 }
 
-.login-box .user-box input:focus ~ label, .login-box .user-box input:valid 
-	 ~ label {
-	top: -20px;
-	left: 0;
-	color: #ce97fa;
-	font-size: 12px;
+.login-box2 .user-box {
+  position: relative;
 }
 
-.user-box {
+.login-box2 .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box2 .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.login-box2 .user-box input:focus ~ label,
+.login-box2 .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color:#ce97fa;
+  font-size: 12px;
+}
+
+.login-box2 form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color:#ce97fa;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+}
+
+.login-box2 a:hover {
+  background: #ce97fa;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #ce97fa;
+}
+
+.login-box2 a span {
+  position: absolute;
+  display: block;
+}
+
+.login-box2 a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #ce97fa);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+.login-box2 a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #ce97fa);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,
+  100% {
+    top: 100%;
+  }
+}
+
+.login-box2 a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #ce97fa);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,
+  100% {
+    right: 100%;
+  }
+}
+
+.login-box2 a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent,#ce97fa);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,
+  100% {
+    bottom: 100%;
+  }
+}
+.user-box{
 	display: flex;
-	justify-self: center;
-	justify-content: center;
-	color: beige;
+    align-items: center;
+    justify-content: center;
+     color: #fff;
+  opacity: 0;
+  animation: appear-text .0001s linear forwards;
+  animation-delay: 1s;
+	
+}
+.user-box:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background:#ce97fa94;
+  right: 0;
+  top: 0;
+   animation: hiding-text-ani 0.5s cubic-bezier(0, 0.8, 0.6, 0.8) forwards;
+  animation-delay: 1s; 
+}
+@keyframes hiding-text-ani {
+  0% {
+    width: 0%;
+    left: 0;
+  }
+
+  50% {
+    width: 100%;
+    left: 0%;
+  }
+
+  100% {
+    left: 100%;
+    width: 0%;
+  }
 }
 
-.login-box form a {
-	position: relative;
-	display: inline-block;
-	padding: 10px 20px;
-	color: #ce97fa;
-	font-size: 16px;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	transition: 0.5s;
-	margin-top: 40px;
-	letter-spacing: 4px;
-}
-
-.login-box a:hover {
-	background: #ce97fa;
-	color: #fff;
-	border-radius: 5px;
-	box-shadow: 0 0 5px #ce97fa, 0 0 25px #ce97fa, 0 0 50px #ce97fa, 0 0
-		100px #ce97fa;
-}
-
-.login-box a span {
-	position: absolute;
-	display: block;
-}
-
-.login-box a span:nth-child(1) {
-	top: 0;
-	left: -100%;
-	width: 100%;
-	height: 2px;
-	background: linear-gradient(90deg, transparent, #ce97fa);
-	animation: btn-anim1 1s linear infinite;
-}
-
-@
-keyframes btn-anim1 { 0% {
-	left: -100%;
-}
-
-50
-
-
-%
-,
-100
-
-
-%
-{
-left
-
-
-:
-
-
-100
-%;
-
-
-}
-}
-.login-box a span:nth-child(2) {
-	top: -100%;
-	right: 0;
-	width: 2px;
-	height: 100%;
-	background: linear-gradient(180deg, transparent, #ce97fa);
-	animation: btn-anim2 1s linear infinite;
-	animation-delay: 0.25s;
-}
-
-@
-keyframes btn-anim2 { 0% {
-	top: -100%;
-}
-
-50
-
-
-%
-,
-100
-
-
-%
-{
-top
-
-
-:
-
-
-100
-%;
-
-
-}
-}
-.login-box a span:nth-child(3) {
-	bottom: 0;
-	right: -100%;
-	width: 100%;
-	height: 2px;
-	background: linear-gradient(270deg, transparent, #ce97fa);
-	animation: btn-anim3 1s linear infinite;
-	animation-delay: 0.5s;
-}
-
-@
-keyframes btn-anim3 { 0% {
-	right: -100%;
-}
-
-50
-
-
-%
-,
-100
-
-
-%
-{
-right
-
-
-:
-
-
-100
-%;
-
-
-}
-}
-.login-box a span:nth-child(4) {
-	bottom: -100%;
-	left: 0;
-	width: 2px;
-	height: 100%;
-	background: linear-gradient(360deg, transparent, #ce97fa);
-	animation: btn-anim4 1s linear infinite;
-	animation-delay: 0.75s;
-}
-
-@
-keyframes btn-anim4 { 0% {
-	bottom: -100%;
-}
-
-50
-
-
-%
-,
-100
-
-
-%
-{
-bottom
-
-
-:
-
-
-100
-%;
-
-
-}
+@keyframes appear-text {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .m {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+background: linear-gradient(#00000000 ,#00000000);
 }
